# NESFDM

./: .gitignore  CMakeLists.txt  build.ps1  build.sh  runfdmnes.ps1  runtest.ps1  sweepParameters.txt
apps/: app_double_scan.cpp  app_fdm_nes.cpp  app_test_sandbox.cpp
include/: ModelParameters.h  NESFDMUtils.h  NESSolver.h  NESSweeper.h  RungeKutta4.h
src/: ModelParameters.cpp  NESFDMUtils.cpp  NESSolver.cpp  NESSweeper.cpp  RungeKutta4.cpp
